--- a/Web_Site/Carousel.html
+++ b/Web_Site/Carousel.html
@@ -95,7 +95,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="img/Test2.jpeg" alt="Second slide">
+          <img class="second-slide" src="img/Test2.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Another example headline.</h1>
