--- a/Web_Site/Carousel.html
+++ b/Web_Site/Carousel.html
@@ -105,7 +105,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="img/Test3.jpeg" alt="Third slide">
+          <img class="third-slide" src="img/Test3.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>One more for good measure.</h1>
